# full-stack-python-kit

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
apps/cli/: main.py
apps/gui/: main.py
apps/webapp/backend/: alembic.ini  main.py
apps/webapp/backend/app/: __init__.py  api.py  monitoring.py
apps/webapp/backend/app/routes/: __init__.py  auth.py  notes.py  tasks.py  users.py  websocket.py
apps/webapp/backend/migrations/: env.py
apps/webapp/frontend/: next.config.js  package.json  tailwind.config.js
apps/webapp/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/webapp/frontend/src/components/dashboard/: DashboardStats.tsx  QuickActions.tsx  RecentActivity.tsx
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_auth.py
